php/include/pdf_oxide.h

typedef struct DocumentEditor DocumentEditor;
typedef struct FfiBarcodeImage FfiBarcodeImage;
typedef struct FfiPdfAResults FfiPdfAResults;
typedef struct FfiPdfXResults FfiPdfXResults;
typedef struct FfiUaResults FfiUaResults;
typedef struct PdfDocument PdfDocument;
FfiBarcodeImage *pdf_generate_qr_code(const char *data,
                                      int32_t error_correction,
                                      int32_t size_px,
                                      int32_t *error_code);
uint8_t *pdf_barcode_get_image_png(const FfiBarcodeImage *barcode_handle,
                                   int32_t _size_px,
                                   int32_t *out_len,
                                   int32_t *error_code);
char *pdf_barcode_get_svg(const FfiBarcodeImage *barcode_handle,
                          int32_t _size_px,
                          int32_t *error_code);
int32_t pdf_add_barcode_to_page(DocumentEditor *document_handle,
                                int32_t page_index,
                                const FfiBarcodeImage *barcode_handle,
                                float x,
                                float y,
                                float width,
                                float height,
                                int32_t *error_code);
int32_t pdf_barcode_get_format(const FfiBarcodeImage *barcode_handle, int32_t *error_code);
char *pdf_barcode_get_data(const FfiBarcodeImage *barcode_handle, int32_t *error_code);
float pdf_barcode_get_confidence(const FfiBarcodeImage *_barcode_handle, int32_t *error_code);
void pdf_barcode_free(FfiBarcodeImage *handle);
int32_t pdf_document_sign(void *document_handle,
                          const void *certificate_handle,
                          const char *reason,
                          const char *location,
                          int32_t *error_code);
void *pdf_document_get_signature(const void *document_handle, int32_t index, int32_t *error_code);
void *pdf_signature_get_certificate(const void *sig, int32_t *error_code);
char *pdf_certificate_get_subject(const void *cert, int32_t *error_code);
char *pdf_certificate_get_issuer(const void *cert, int32_t *error_code);
char *pdf_certificate_get_serial(const void *cert, int32_t *error_code);
void pdf_certificate_get_validity(const void *cert,
                                  int64_t *not_before,
                                  int64_t *not_after,
                                  int32_t *error_code);
int32_t pdf_certificate_is_valid(const void *cert, int32_t *error_code);
void pdf_certificate_free(void *handle);
bool pdf_signature_has_timestamp(const void *_sig, int32_t *error_code);
bool pdf_add_timestamp(const uint8_t *_pdf_data,
                       uintptr_t _pdf_len,
                       int32_t _sig_index,
                       const char *_tsa_url,
                       uint8_t **_out_data,
                       uintptr_t *_out_len,
                       int32_t *error_code);
FfiUaResults *pdf_validate_pdf_ua(PdfDocument *document, int32_t level, int32_t *error_code);
void pdf_pdf_ua_results_free(FfiUaResults *results);
bool pdf_convert_to_pdf_a(PdfDocument *document, int32_t level, int32_t *error_code);
bool pdf_pdf_a_is_compliant(const FfiPdfAResults *results, int32_t *error_code);
int32_t pdf_pdf_a_error_count(const FfiPdfAResults *results);
char *pdf_pdf_a_get_error(const FfiPdfAResults *results, int32_t index, int32_t *error_code);
int32_t pdf_pdf_a_warning_count(const FfiPdfAResults *results);
void pdf_pdf_a_results_free(FfiPdfAResults *results);
bool pdf_pdf_x_is_compliant(const FfiPdfXResults *results, int32_t *error_code);
int32_t pdf_pdf_x_error_count(const FfiPdfXResults *results);
char *pdf_pdf_x_get_error(const FfiPdfXResults *results, int32_t index, int32_t *error_code);
void pdf_pdf_x_results_free(FfiPdfXResults *results);