ruby/lib/pdf_oxide/ffi/bindings.rb


      # ============================================================
      # BARCODE OPERATIONS (13 missing functions)
      # ============================================================
      # REMOVED duplicate declaration: :pdf_generate_qr_code (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_generate_ean13 (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_generate_ean8 (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_generate_upc_a (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_generate_code128 (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_generate_code39 (1 line)
      # REMOVED duplicate declaration: :pdf_barcode_get_image_png (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_barcode_get_image_base64 (1 line)
      # REMOVED duplicate declaration: :pdf_barcode_get_svg (1 line)
      # REMOVED duplicate declaration: :pdf_barcode_free (1 line)
      # REMOVED duplicate declaration: :pdf_add_barcode_to_page (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_add_barcode_to_page_fit (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_add_qr_code_with_label (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_detect_barcodes_on_page (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_barcode_get_bounds (1 line)
      attach_function :pdf_barcode_get_confidence, [:pointer], :float
      attach_function :pdf_barcode_get_data, [:pointer], :string
      attach_function :pdf_barcode_get_format, [:pointer], :int32
      # REMOVED phantom (no upstream symbol): :pdf_oxide_barcode_count (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_barcode_get_data (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_barcode_get_format (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_oxide_barcode_list_free (1 line)

      # ============================================================
      # DIGITAL SIGNATURE OPERATIONS (38 missing functions)
      # ============================================================
      # REMOVED phantom (no upstream symbol): :pdf_credentials_from_pkcs12 (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_credentials_from_pem (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_credentials_from_der (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_credentials_add_chain_cert (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_credentials_get_certificate (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_credentials_free (1 line)
      attach_function :pdf_certificate_get_subject, [:pointer, :pointer], :string
      # REMOVED phantom (no upstream symbol): :pdf_certificate_get_cn (1 line)
      attach_function :pdf_certificate_get_issuer, [:pointer, :pointer], :string
      attach_function :pdf_certificate_get_serial, [:pointer, :pointer], :string
      # REMOVED phantom (no upstream symbol): :pdf_certificate_get_size (1 line)
      attach_function :pdf_certificate_get_validity, [:pointer, :pointer, :pointer, :pointer], :void
      attach_function :pdf_certificate_is_valid, [:pointer], :bool
      # REMOVED phantom (no upstream symbol): :pdf_certificate_is_expired (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_certificate_get_key_size (1 line)
      # REMOVED duplicate declaration: :pdf_certificate_free (1 line)
      # REMOVED duplicate declaration: :pdf_document_sign (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_sign_with_appearance (10 lines)
      #
      #
      #
      #
      #
      #
      #
      #
      #
      attach_function :pdf_add_timestamp, [
        :pointer, :size_t,     # pdf_data, pdf_len
        :int32,                # signature_index
        :string,               # tsa_url
        :pointer, :pointer,    # out_data, out_len
        :pointer               # error_code
      ], :bool
      # REMOVED phantom (no upstream symbol): :pdf_document_co_sign (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_signature_count (1 line)
      # REMOVED duplicate declaration: :pdf_document_get_signature (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_verify_signature (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_verify_all_signatures (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_signature_get_time (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_signature_get_reason (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_signature_get_location (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_signature_get_contact (1 line)
      attach_function :pdf_signature_get_certificate, [:pointer, :pointer], :pointer
      # REMOVED phantom (no upstream symbol): :pdf_signature_get_subfilter (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_signature_get_digest_algorithm (1 line)
      attach_function :pdf_signature_has_timestamp, [:pointer], :bool
      # REMOVED phantom (no upstream symbol): :pdf_signature_to_json (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_signature_info_free (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_remove_signature (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_clear_all_signatures (1 line)

      # ============================================================
      # PAdES Level Enforcement
      # ============================================================
      # REMOVED phantom (no upstream symbol): :pdf_pades_validate_level (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_pades_sign (8 lines)
      #
      #
      #
      #
      #
      #
      #
      # REMOVED phantom (no upstream symbol): :pdf_pades_get_level (1 line)

      # ============================================================
      # XFA FORM OPERATIONS (13 missing functions)
      # ============================================================
      # REMOVED phantom (no upstream symbol): :pdf_get_xfa_form_type (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_xfa_form_get_title (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_xfa_form_page_count (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_xfa_form_find_field (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_xfa_field_get_label (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_xfa_field_get_type (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_xfa_field_get_value (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_xfa_field_set_value (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_xfa_field_is_required (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_xfa_field_is_readonly (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_xfa_dataset_to_json (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_extract_xfa_as_fdf (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_get_xfa_template_xml (1 line)

      # ============================================================
      # COMPLIANCE OPERATIONS (23 missing functions)
      # ============================================================
      # REMOVED phantom (no upstream symbol): :pdf_validate_pdf_a (1 line)
      # REMOVED duplicate declaration: :pdf_pdf_a_is_compliant (1 line)
      # REMOVED duplicate declaration: :pdf_pdf_a_error_count (1 line)
      # REMOVED duplicate declaration: :pdf_pdf_a_warning_count (1 line)
      # REMOVED duplicate declaration: :pdf_pdf_a_get_error (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_pdf_a_get_warning (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_pdf_a_get_report (1 line)
      # REMOVED duplicate declaration: :pdf_pdf_a_results_free (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_validate_pdf_x (1 line)
      # REMOVED duplicate declaration: :pdf_pdf_x_is_compliant (1 line)
      # REMOVED duplicate declaration: :pdf_pdf_x_error_count (1 line)
      # REMOVED duplicate declaration: :pdf_pdf_x_get_error (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_pdf_x_get_report (1 line)
      # REMOVED duplicate declaration: :pdf_pdf_x_results_free (1 line)
      # REMOVED duplicate declaration: :pdf_validate_pdf_ua (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_pdf_ua_is_compliant (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_pdf_ua_issue_count (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_pdf_ua_get_issue (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_pdf_ua_get_report (1 line)
      # REMOVED duplicate declaration: :pdf_pdf_ua_results_free (1 line)
      # REMOVED duplicate declaration: :pdf_convert_to_pdf_a (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_conversion_success (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_conversion_modification_count (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_conversion_get_modification (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_conversion_get_report (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_conversion_results_free (1 line)

      # ============================================================
      # ADDITIONAL MANAGER SUPPORT FUNCTIONS
      # ============================================================

      # Analysis functions used by managers
      # REMOVED phantom (no upstream symbol): :pdf_analysis_get_block_count (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_analysis_get_column_count (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_analysis_get_image_block_count (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_analysis_get_layout_type (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_analysis_get_table_count (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_analysis_get_text_block_count (1 line)

      # Document edit functions
      # REMOVED phantom (no upstream symbol): :pdf_document_delete_page (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_insert_page (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_move_page (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_duplicate_page (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_merge_pages (1 line)

      # Page dimension functions
      # REMOVED phantom (no upstream symbol): :pdf_document_get_media_box (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_crop_box (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_set_crop_box (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_page_label (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_page_rotation (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_set_page_rotation (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_page_width (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_page_height (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_page_complexity (1 line)

      # Document property functions
      # REMOVED phantom (no upstream symbol): :pdf_document_has_layers (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_has_outlines (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_has_javascript (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_has_valid_signatures (1 line)

      # Form functions
      # REMOVED phantom (no upstream symbol): :pdf_document_has_acro_forms (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_form_field_names (1 line)
      # REMOVED phantom (no upstream symbol): :pdf_document_get_form_field_count (1 line)
